web/client/css/styles.css
@import url(http://fonts.googleapis.com/css?family=Pathway+Gothic+One);


    div{
        margin:0px;
        padding:0px;
    }

    html{
        height:100%;
        width:100%;
        margin:0px;
        padding:0px;
    }


body{
	height:100%;
	width:100%;
    background:#fff;
	list-style-type: none;
    overflow-x: hidden;
    margin:0px;
    padding:0px;
}

#bodyContainer{
    text-align:center;
}

#bodyText{
    font-size:0.7em;
    color:#508534;
    padding:0% 3% 0% 3%;
}


#timeSpentClock{
    /*font-family: 'Armata', sans-serif;*/
    font-family: 'Roboto', sans-serif;
    color:#000;
    text-align:center;
    font-size:2.9em;
}

.clockDetail{
    margin-top:-3px;
    font-size:0.3em;

}

#startButton {
    margin-top:20px;
    cursor:pointer;
    font-family: Arial;
    color: #ffffff;
    font-size: 2.0em;
    padding: 4% 3% 4% 3%;
    text-decoration: none;
    -webkit-border-radius: 13px;
    -moz-border-radius: 13px;
    border-radius: 13px;
    -webkit-box-shadow: 0px 1px 3px #666666;
    -moz-box-shadow: 0px 1px 3px #666666;
    box-shadow: 0px 1px 3px #666666;
    text-shadow: 1px 1px 3px #666666;
}

.bigStartButton{
    border: solid #a1a1a1 2px;
    background: -webkit-gradient(linear, 0 0, 0 100%, from(#47d14e), to(#12690a));
    background: -moz-linear-gradient(top, #47d14e, #12690a);
}
.bigStartButton:hover {
    background: #1c961c;
}
.bigStopButton{
    border: solid #a1a1a1 2px;
    background: -webkit-gradient(linear, 0 0, 0 100%, from(#fa3f3f), to(#b50000));
    background: -moz-linear-gradient(top, #fa3f3f, #b50000);
}
.bigStopButton:hover {
    background: #ba3d3d;
}

#mainPageBody{
    font-size: 1em;
    line-height: 1.4;
    background-image:url('../img/backgrounds/Vermont.png');
    background-position: center;
    background-repeat: no-repeat;
}

#greenupLogo{
    height:7%;
    margin-top:3%;
}

.showInline{
}

.showBlock{

    display:inline;    display:block;
}

.showInlineBlock{
    display:inline-block;
}

.hidden{
    display:none;
}

a, a:hover, a:visited{
	text-decoration:none;
	color:inherit;
}



.mobileContainer{
	height:90%;
	width:95%;
	margin:auto;
	/*background:#ddd;*/
}

#dialogSlider{
    position: fixed;
    top:86%;
    height:9%;
    z-index:100;
    margin:5px 0px 0px 0px;
    width:100%;
    padding:20px 0px 20px 0px;
    text-align:center;
    /*background: #ddd;*/
    background-image: url('../img/backgrounds/dark_dotted2.png');
    -webkit-transition: all 0.7s ease-in-out;
    opacity: 0.0;
    /* top: 77%; */
    -webkit-box-shadow:  0px -2px 2px 0px rgba(0, 0, 0, 0.5);
    box-shadow:  0px -2px 2px 0px rgba(0, 0, 0, 0.5);
}

.dialogSliderContents{
    vertical-align: top;
    display:inline-block;
    width:25%;
    height:90%;
    /*border:solid 1px green;*/
}

.dialogSliderButton{
    display:block;
    width: 100%;
    height:49%;
    background: #eeeeee;
    margin-bottom:4%;
    cursor:pointer;
    -moz-border-radius:2px;
        -webkit-border-radius:2px;
        border-radius:2px;

        color:#444;
        font-family:arial;
        font-size:1.1em;
        font-weight:bold;
        text-decoration:none;
        text-shadow:0px 1px 0px #ced9bf;

}

.dialogButtonOk{
    color:#fff;
    -moz-box-shadow:inset 0px 0px 14px -3px #0969A2;
        -webkit-box-shadow:inset 0px 0px 14px -3px #0969A2;
        box-shadow:inset 0px 0px 14px -3px #FFC973;
        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dbe6c4), color-stop(1, #9ba892));
        background:-moz-linear-gradient(top, #0969A2 5%,  #03436A 100%);
        background:-webkit-linear-gradient(top, #0969A2 5%,  #03436A 100%);
        background:-o-linear-gradient(top, #0969A2 5%,  #03436A 100%);
        background:-ms-linear-gradient(top, #0969A2 5%,  #03436A 100%);
        background:linear-gradient(to bottom, #00B945 5%, #00782D 100%);
        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0969A2', endColorstr=' #03436A',GradientType=0);
        border:1px solid #00782D;

}

.dialogButtonCancel{
    color:#fff;
    -moz-box-shadow:inset 0px 0px 14px -3px #0969A2;
        -webkit-box-shadow:inset 0px 0px 14px -3px #0969A2;
        box-shadow:inset 0px 0px 14px -3px #FFC973;
        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dbe6c4), color-stop(1, #9ba892));
        background:-moz-linear-gradient(top, #0969A2 5%,  #03436A 100%);
        background:-webkit-linear-gradient(top, #0969A2 5%,  #03436A 100%);
        background:-o-linear-gradient(top, #0969A2 5%,  #03436A 100%);
        background:-ms-linear-gradient(top, #0969A2 5%,  #03436A 100%);
        background:linear-gradient(to bottom, #ee0000 5%, #a60000 100%);
        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0969A2', endColorstr=' #03436A',GradientType=0);
        border:1px solid #ee1111;
}

.buttonText{
    width:100%;
    height:auto;
    padding-top:6px;
    text-align: center;
}

#dialogSliderTextarea{
    width:70%;
    margin:auto;
}

/*.nav li{
	margin:0px;
	padding:0px;
	display:inline-block;
	width:32%;
	border:solid 1px #000;
}
*/

.nav{
    position: fixed;
    top:86%;
    height:14%;
    z-index:200;
    margin:5px 0px 0px 0px;
    width:100%;
    padding:0px;
    text-align:center;
    background: -webkit-gradient(linear, 0 0, 0 100%, from(#47d14e), to(#12690a));
    background: -moz-linear-gradient(top, #47d14e, #12690a);
}
	.nav li{
	   display:inline;
	   
    }
/* ... */

